# FRAUDE

./: .dockerignore  .env.example  .gitignore  README.md  get_keys.py  midas.html  package-lock.json  package.json  scratch_ipo.rs  test_cargo.rs  test_scraper.rs  update_settings.patch
.github/workflows/: release.yml
core/: Cargo.toml  halkarz.html
core/fixtures/: pdr_mmh_2026_05.txt  pdr_mmh_2026_06_yerlesim.txt  pdr_ybs_2026_06.txt
core/src/: ai_tagger.rs  api.rs  bist_indices.rs  economic_calendar.rs  fql.rs  fundamentals.rs  ipo_scraper.rs  ipo_store.rs  isyatirim.rs  kap_pdr.rs  keychain.rs  lib.rs  news_tagger.rs  persist.rs  services.rs  tefas.rs  tefas_issuer.rs  yahoo.rs
docs/: FRAUDE_MODULE_PROTOCOL.md  WEB_MIGRATION_PLAN.md  fraude-rehber.html  supabase-licenses.sql  supabase-site.sql
docs/email-templates/: README.md  confirm-signup.html  license-key.html  reset-password.html
scripts/: gen-licenses.mjs  registry-build.mjs  registry-dev.mjs  verify-registry-dev.mjs  verify-registry-persistence.mjs
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
server/src/: auth.rs  main.rs  registry.rs  rpc.rs
site/: index.html  package-lock.json  package.json  vercel.json
site/src/: App.tsx  main.tsx  styles.css
site/src/components/: Brand.tsx  CandleTape.tsx  NotifyPrefs.tsx
site/src/lib/: bistTickers.ts  bistUniverse.ts  download.ts  i18n.tsx  router.ts  supabase.ts  useSession.ts
site/src/pages/: Account.tsx  Admin.tsx  Landing.tsx  LicenseAbuse.tsx  ResetPassword.tsx  SignIn.tsx  Updates.tsx
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  generate_ipos.cjs  generate_ipos.py  halkarz.html  new_ipos.rs  rewrite_scraper.py  scratch_dunyh.rs  tauri.conf.json  test.rs  test_fetch.rs  test_fetch_old.cjs  test_fetch_old2.cjs  test_scraper.rs  test_scraper2.rs  update_recent_ipos.py
src-tauri/capabilities/: default.json
src-tauri/data/: ipo_seed.json
src-tauri/fixtures/: pdr_aal_2026_06_yerlesim.txt  pdr_bvm_2026_06.txt  pdr_glc_2026_06.txt  pdr_mmh_2026_06_kolonlu.txt  pdr_ti1_2026_06.txt  tradingeconomics_turkey_calendar.html
src-tauri/icons/: icon.icns
src-tauri/src/: ai_tagger.rs  bist.rs  bist_universe.rs  commands.rs  corporate_actions.rs  domain.rs  indicators.rs  ipo_scraper.rs  ipo_store.rs  isyatirim.rs  isyatirim_price.rs  kap.rs  keychain.rs  lib.rs  live_quotes.rs  market_calendar.rs  module_updater.rs  monitor.rs  news.rs  providers.rs  publisher.rs  secrets.rs  services.rs  shareholders.rs  spk.rs  storage.rs  subsidiaries.rs  tefas.rs  yahoo.rs
src/api/: i18n.ts  platformClient.ts  tauriClient.ts
src/components/: CommandPalette.tsx  EconomicCalendar.tsx  FlashValue.tsx  HotkeyTip.tsx  MarketMarquee.tsx  MorningBriefModal.tsx  Toast.tsx  TopSearch.tsx  icons.tsx  symbolCatalog.ts
src/features/ai/: AiPanel.tsx
src/features/alerts/: AlertsModal.tsx  alertTypes.ts  useAlerts.ts
src/features/auth/: AuthBackdrop.tsx  AuthGate.tsx  IntroSplash.tsx  LicenseView.tsx  LoginView.tsx  auth.css  deepLink.ts  license.ts  session.ts  supabaseClient.ts
src/features/corporate/: CorporateActionsView.tsx
src/features/dashboard/: ComparativeChart.tsx  DashboardModules.tsx  DashboardView.tsx  MarketHeatmap.tsx
src/features/funds/: FundCompare.tsx  FundDetail.tsx  FundsView.tsx
src/features/guide/: GuideView.css  GuideView.tsx
src/features/index/: IndexHeatmap.tsx  IndexView.tsx
src/features/kap/: KapFeedView.tsx
src/features/modules/: ContributionReviewPanel.tsx  ContributorIdentityPanel.tsx  ModuleCenterView.tsx  UpdatePreviewPanel.tsx
src/features/monitor/: MonitorView.tsx
src/features/news/: NewsFeedView.tsx
src/features/notifications/: NotificationsView.css  NotificationsView.tsx
src/features/publish/: PublishView.css  PublishView.tsx
src/features/screener/: ScreenerView.tsx
src/features/settings/: SettingsView.css  SettingsView.tsx
src/features/share/: ShareModal.tsx
src/features/tabs/: TabBar.tsx
src/features/team/: TeamView.tsx
src/features/terminal/: TerminalPanel.tsx
src/features/ticker/: FinancialsTab.tsx  PriceChart.tsx  TickerView.tsx  WatchlistJournal.tsx
src/features/updates/: UpdatesView.css  UpdatesView.tsx  githubSubmit.ts
src/hooks/: useLiveQuotes.ts  useMonitor.ts  useMorningBrief.ts  useWatchlist.ts
src/lib/: actions.ts  equityGroups.ts  heatmapScale.ts  instrumentKind.ts  marketHolidays.ts  marketHours.ts  notify.ts  openExternal.ts  screenerPresets.ts  shortcuts.ts
src/locales/: en.json  tr.json
src/modules/: activation.ts  capabilityBroker.ts  catalog.ts  contributionClient.ts  crypto.ts  deviceIdentity.ts  patchPipeline.ts  platform.ts  registryClient.ts  sandboxRuntime.ts  staging.ts  storage.ts  types.ts  updateEngine.ts  useModuleRegistry.ts  useModuleUpdates.ts  workspaceRegistry.tsx
supabase/functions/market-watch/: index.ts
supabase/functions/refresh-bist-universe/: index.ts
supabase/functions/report-license-abuse/: index.ts
supabase/functions/send-license-email/: index.ts
updates/: README.md  registry.json
