[package]
name = "fraude-core"
version = "0.1.0"
edition = "2021"
description = "FRAUDE veri çekirdeği — masaüstü (src-tauri) ve web API (server) tarafından paylaşılan, Tauri'siz veri katmanı"

# Bu crate bilinçli olarak Tauri içermez: aynı komut gövdeleri masaüstünde
# invoke_handler'dan, web'de /v1/rpc'den çağrılır (bkz. server/src/rpc.rs).

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# default-features kapalı: varsayılan native-tls Linux'ta openssl-sys ister ve
# slim Docker imajında derleme kırılır; TLS tamamen rustls'ten gelir.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "charset", "http2", "macos-system-configuration", "system-proxy"] }
chrono = { version = "0.4", features = ["serde"] }
rss = "2.1.0"
regex = "1.13.0"
dirs = "6.0.0"
sha2 = "0.10"
scraper = "0.27.0"
futures = "0.3.32"
base64 = "0.22"
# linux-native (çekirdek keyutils, saf Rust): sync-secret-service'in dbus sistem
# kütüphanesi bağımlılığı Docker'da derlenemiyor; sunucu zaten sır saklamaz.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
pdf-extract = "0.12.0"
