[package]
name = "fraude-server"
version = "0.1.0"
edition = "2021"
description = "FRAUDE web API — /v1/rpc HTTP kabuğu (Tauri komut sözleşmesinin web karşılığı)"

# Tauri içermez: veri katmanı fraude-core'dan gelir (masaüstüyle birebir aynı
# komut gövdeleri — bkz. core/src/api.rs).

[dependencies]
fraude-core = { path = "../core" }
chrono = "0.4"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 2
