[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fraude-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"] }
chrono = { version = "0.4", features = ["serde"] }
rss = "2.1.0"
regex = "1.13.0"
dirs = "6.0.0"
sha2 = "0.10"
scraper = "0.27.0"
futures = "0.3.32"
base64 = "0.22"
ed25519-dalek = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-deep-link = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
pdf-extract = "0.12.0"

# Derin bağlantı Windows/Linux'ta ikinci bir örnek açar; single-instance
# (deep-link özelliğiyle) adresi çalışan örneğe yönlendirir. macOS'ta gerekmez.
[target."cfg(any(target_os = \"windows\", target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }


